--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elektra Knight : Web/Dev</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
